Define hpc configs through config files
